Computed total height + added footer.

--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@ window.onload = function(){
 }
 </script>
 
+<p>&#169; 2017 <a href="https://evoluteur.github.io/">Olivier Giulieri</a>.
+Code available at <a href="https://github.com/evoluteur/d3-table-cards">GitHub</a>.</p>
+
 </body>
 </html>
