Added keywords + description + favicon.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 	<script src="d3.v4.min.js" charset="utf-8"></script>
 	<script src="data.js" charset="utf-8"></script>
 	<script src="d3-table-cards.js" charset="utf-8"></script>
+    <link rel="icon" type="image/png" href="favicon.png" />
 	<link href="d3-table-cards.css" rel="stylesheet">
+	<title>D3-Table-Cards</title>
+    <meta name="description" content="D3-Table-Cards: Table/Cards views using D3.js for animated transformations and transitions.">
+    <meta name="keywords" content="d3 d3.js table card cards view javascript gemstones">
 </head>
 <body onresize="redraw()">
 
