Added license info: MIT.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ window.onload = function(){
 </script>
 
 <p>&#169; 2017 <a href="https://evoluteur.github.io/">Olivier Giulieri</a>.
-Code available at <a href="https://github.com/evoluteur/d3-table-cards">GitHub</a>.</p>
+Code available at <a href="https://github.com/evoluteur/d3-table-cards">GitHub</a> under the MIT license.</p>
 
 </body>
 </html>
