--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="d3-table-cards.css" rel="stylesheet">
 	<title>D3-Table-Cards</title>
     <meta name="description" content="D3-Table-Cards: Table/Cards views using D3.js for animated transformations and transitions.">
-    <meta name="keywords" content="d3 d3.js table card cards view javascript gemstones">
+    <meta name="keywords" content="d3 d3v4 js table card cards view javascript gemstones">
 </head>
 <body onresize="redraw()">
 
