--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div id="opts">
 		<div>View:
 			<a href="javascript:redraw('table')">Table</a> /
-			<a href="javascript:redraw('card')">Cards</a>
+			<a href="javascript:redraw('cards')">Cards</a>
 		</div>
 		<div>Order:
 			<a href="javascript:sort('name')">Name</a> /
@@ -25,9 +25,9 @@
 	</div>
 
 	<div class="holder">
-		<div class="header">
-			<div>Gemstone</div>
-			<div>Spiritual properties</div>
+		<div class="header sortable">
+			<div onclick="sort('name')">Gemstone</div>
+			<div onclick="sort('chakra')">Spiritual properties</div>
 		</div>
 	</div>
 
@@ -37,8 +37,12 @@ window.onload = function(){
 }
 </script>
 
-<p>&#169; 2017 <a href="https://evoluteur.github.io/">Olivier Giulieri</a>.
-Code available at <a href="https://github.com/evoluteur/d3-table-cards">GitHub</a> under the MIT license.</p>
+<p>Data from <a href="https://smile.amazon.com/dp/1844090671" target="crystals">Healing Crystals</a> by 
+Michael Gienger.</p>
+
+<p>Code available at <a href="https://github.com/evoluteur/d3-table-cards">GitHub</a> with MIT license.</p>
+
+<p>&#169; 2017 <a href="https://evoluteur.github.io/">Olivier Giulieri</a>.</p>
 
 </body>
 </html>
