--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href="demo.css" rel="stylesheet">
 	<title>D3-Table-Cards</title>
     <meta name="description" content="D3-Table-Cards: Table/Cards views using D3.js for animated transformations and transitions.">
-    <meta name="keywords" content="d3 d3v4 js table card cards view javascript gemstones">
+    <meta name="keywords" content="d3 d3v4 js table card cards view javascript animation gemstones">
 </head>
 <body onresize="redraw()">
 
@@ -43,7 +43,7 @@ Michael Gienger.</p>
 
 <p>Code available at <a href="https://github.com/evoluteur/d3-table-cards">GitHub</a> with MIT license.</p>
 
-<p>&#169; 2017 <a href="https://evoluteur.github.io/">Olivier Giulieri</a>.</p>
+<p>&#169; 2018 <a href="https://evoluteur.github.io/">Olivier Giulieri</a>.</p>
 
 </body>
 </html>
