--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" > 
 <head>
-	<script src="d3.v4.min.js" charset="utf-8"></script>
-	<script src="data.js" charset="utf-8"></script>
-	<script src="d3-table-cards.js" charset="utf-8"></script>
+    <meta charset="utf-8">
+	<title>D3-Table-Cards</title>
     <link rel="icon" type="image/png" href="favicon.png" />
 	<link href="d3-table-cards.css" rel="stylesheet">
 	<link href="demo.css" rel="stylesheet">
-	<title>D3-Table-Cards</title>
+	<script src="d3.v4.min.js" charset="utf-8"></script>
+	<script src="data.js" charset="utf-8"></script>
+	<script src="d3-table-cards.js" charset="utf-8"></script>
     <meta name="description" content="D3-Table-Cards: Table/Cards views using D3.js for animated transformations and transitions.">
     <meta name="keywords" content="d3 d3v4 js table card cards view javascript animation gemstones">
 </head>
@@ -38,10 +39,10 @@ window.onload = function(){
 }
 </script>
 
+<p>Code available at <a href="https://github.com/evoluteur/d3-table-cards">GitHub</a> under the MIT license.</p>
+
 <p>Data from <a href="https://smile.amazon.com/dp/1844090671" target="crystals">Healing Crystals</a> by 
 Michael Gienger.</p>
-
-<p>Code available at <a href="https://github.com/evoluteur/d3-table-cards">GitHub</a> with MIT license.</p>
 
 <p>&#169; 2018 <a href="https://evoluteur.github.io/">Olivier Giulieri</a>.</p>
 
