Updated for d3v6 + small improvements.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
-<html xmlns="http://www.w3.org/1999/xhtml" > 
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
 	<title>D3-Table-Cards</title>
+	<meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="icon" type="image/png" href="favicon.png" />
-	<link href="d3-table-cards.css" rel="stylesheet">
-	<link href="demo.css" rel="stylesheet">
-	<script src="d3.v4.min.js" charset="utf-8"></script>
-	<script src="data.js" charset="utf-8"></script>
-	<script src="d3-table-cards.js" charset="utf-8"></script>
+	<link href="css/d3-table-cards.css" rel="stylesheet">
+	<link href="css/demo.css" rel="stylesheet">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.1.1/d3.js" charset="utf-8"></script>
+	<script src="js/data.js" charset="utf-8"></script>
+	<script src="js/d3-table-cards.js" charset="utf-8"></script>
     <meta name="description" content="D3-Table-Cards: Table/Cards views using D3.js for animated transformations and transitions.">
-    <meta name="keywords" content="d3 d3v4 js table card cards view javascript animation gemstones">
+    <meta name="keywords" content="d3 d3v6 table card cards view javascript animation transition gemstone chakra">
 </head>
-<body onresize="redraw()">
-	<h1>Gemstones Properties</h1>
+<body onresize="redraw()" onload="render()">
+	<h1>
+		D3-Table-Cards
+		<div class="github">
+			<iframe src="https://ghbtns.com/github-btn.html?user=evoluteur&repo=d3-table-cards&type=star&count=true&size=small" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
+		</div>
+	</h1>
+
 	<div id="opts">
 		<div>View:
 			<a href="javascript:redraw('table')">Table</a> /
@@ -29,20 +37,12 @@
 			<div onclick="sort('chakra')">Spiritual properties</div>
 		</div>
 	</div>
-<script>
-window.onload = function(){
-	render();
-}
-</script>
 
-<p><br/></p>
-
-<p>Code available at <a href="https://github.com/evoluteur/d3-table-cards">GitHub</a> under the MIT license.</p>
-
-<p>Gemstones properties from <a href="https://smile.amazon.com/dp/1844090671" target="crystals">Healing Crystals</a> by 
-Michael Gienger.</p>
-
-<p>&#169; 2019 <a href="https://evoluteur.github.io/">Olivier Giulieri</a>.</p>
+	<footer>
+		<p>Gemstones properties: <a href="https://smile.amazon.com/dp/1844090671" target="crystals">Healing Crystals</a> by Michael Gienger.</p>
+		<p>Code: <a href="https://github.com/evoluteur/d3-table-cards">D3-Table-Cards</a> under the MIT license.</p>
+		<p>&#169; 2020 <a href="https://evoluteur.github.io/">Olivier Giulieri</a>.</p>
+	</footer>
 
 </body>
 </html>
