ReadMe: added layout config.

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 	</div>
 
 	<footer>
-		<p>Gemstones properties: <a href="https://smile.amazon.com/dp/1844090671" target="crystals">Healing Crystals</a> by Michael Gienger.</p>
-		<p>Code: <a href="https://github.com/evoluteur/d3-table-cards">D3-Table-Cards</a> under the MIT license.</p>
-		<p>&#169; 2020 <a href="https://evoluteur.github.io/">Olivier Giulieri</a>.</p>
+		<p>The code is available at <a href="https://github.com/evoluteur/d3-table-cards">GitHub</a> under the MIT license.</p>
+		<p>Gemstones information from the book <a href="https://smile.amazon.com/dp/1844090671" target="crystals">Healing Crystals</a> by Michael Gienger.</p>
+		<p><br/>&#169; 2020 <a href="https://evoluteur.github.io/">Olivier Giulieri</a>.</p>
 	</footer>
 
 </body>
