ReadMe: link to alternate page using CSS transitions instead of D3.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script src="js/data.js" charset="utf-8"></script>
 	<script src="js/d3-table-cards.js" charset="utf-8"></script>
     <meta name="description" content="D3-Table-Cards: Table/Cards views using D3.js for animated transformations and transitions.">
-    <meta name="keywords" content="d3 d3v6 table card cards view javascript animation transition gemstone chakra">
+    <meta name="keywords" content="d3 d3v6 table card cards view javascript animation transition transformation morphing gemstone chakra">
 </head>
 <body onresize="redraw()" onload="render()">
 	<h1>
@@ -41,6 +41,8 @@
 	<footer>
 		<p>The code is available at <a href="https://github.com/evoluteur/d3-table-cards">GitHub</a> under the MIT license.</p>
 		<p>Gemstones information from the book <a href="https://smile.amazon.com/dp/1844090671" target="crystals">Healing Crystals</a> by Michael Gienger.</p>
+		<p>Notes: This demo page can also be done <a href="https://evoluteur.github.io/isomorphic-table-cards/index.html">using CSS transitions instead of D3</a>.</p>
+
 		<p><br/>&#169; 2020 <a href="https://evoluteur.github.io/">Olivier Giulieri</a>.</p>
 	</footer>
 
