Changed code indentation to 2 spaces + added links to other d3 projects.

--- a/index.html
+++ b/index.html
@@ -1,50 +1,81 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-	<title>D3-Table-Cards</title>
-	<meta name="viewport" content="width=device-width,initial-scale=1">
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta charset="utf-8" />
+    <title>D3-Table-Cards</title>
     <link rel="icon" type="image/png" href="favicon.png" />
-	<link href="css/d3-table-cards.css" rel="stylesheet">
-	<link href="css/demo.css" rel="stylesheet">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.1.1/d3.js" charset="utf-8"></script>
-	<script src="js/data.js" charset="utf-8"></script>
-	<script src="js/d3-table-cards.js" charset="utf-8"></script>
-    <meta name="description" content="D3-Table-Cards: Table/Cards views using D3.js for animated transformations and transitions.">
-    <meta name="keywords" content="d3 d3v6 table card cards view javascript animation transition transformation morphing gemstone chakra">
-</head>
-<body onresize="redraw()" onload="render()">
-	<h1>
-		D3-Table-Cards
-		<div class="github">
-			<iframe src="https://ghbtns.com/github-btn.html?user=evoluteur&repo=d3-table-cards&type=star&count=true&size=small" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
-		</div>
-	</h1>
+    <link href="css/d3-table-cards.css" rel="stylesheet" />
+    <link href="css/demo.css" rel="stylesheet" />
+    <script src="d3.v4.min.js" charset="utf-8"></script>
+    <script src="data.js" charset="utf-8"></script>
+    <script src="d3-table-cards.js" charset="utf-8"></script>
+    <meta
+      name="description"
+      content="D3-Table-Cards: Table/Cards views using D3.js for animated transformations and transitions."
+    />
+    <meta
+      name="keywords"
+      content="d3 d3v4 js table card cards view javascript animation gemstones"
+    />
+  </head>
+  <body onresize="redraw()">
+    <h1>Gemstones Properties</h1>
+    <div id="opts">
+      <div>
+        View: <a href="javascript:redraw('table')">Table</a> /
+        <a href="javascript:redraw('cards')">Cards</a> /
+        <a href="javascript:redraw('columns')">Columns</a>
+      </div>
+      <div>
+        Order: <a href="javascript:sort('name')">Name</a> /
+        <a href="javascript:sort('chakra')">Chakra</a>
+      </div>
+    </div>
+    <div class="holder">
+      <div class="header sortable">
+        <div onclick="sort('name')">Gemstone</div>
+        <div onclick="sort('chakra')">Spiritual properties</div>
+      </div>
+    </div>
+    <script>
+      window.onload = function () {
+        render();
+      };
+    </script>
 
-	<div id="opts">
-		<div>View:
-			<a href="javascript:redraw('table')">Table</a> /
-			<a href="javascript:redraw('cards')">Cards</a>
-		</div>
-		<div>Order:
-			<a href="javascript:sort('name')">Name</a> /
-			<a href="javascript:sort('chakra')">Chakra</a>
-		</div>
-	</div>
-	<div class="holder">
-		<div class="header sortable">
-			<div onclick="sort('name')">Gemstone</div>
-			<div onclick="sort('chakra')">Spiritual properties</div>
-		</div>
-	</div>
+    <p><br /></p>
 
-	<footer>
-		<p>The code is available at <a href="https://github.com/evoluteur/d3-table-cards">GitHub</a> under the MIT license.</p>
-		<p>Gemstones information from the book <a href="https://smile.amazon.com/dp/1844090671" target="crystals">Healing Crystals</a> by Michael Gienger.</p>
-		<p>Notes: This demo page can also be done <a href="https://evoluteur.github.io/isomorphic-table-cards/index.html">using CSS transitions instead of D3</a>.</p>
+    <p>
+      Code available at
+      <a href="https://github.com/evoluteur/d3-table-cards">GitHub</a> with the
+      MIT license.
+    </p>
 
-		<p><br/>&#169; 2020 <a href="https://evoluteur.github.io/">Olivier Giulieri</a>.</p>
-	</footer>
+    <p>
+      The same animation done with CSS transitions instead of D3:
+      <a href="https://evoluteur.github.io/isomorphic-table-cards/"
+        >isomorphic-table-cards</a
+      >.
+    </p>
 
-</body>
+    <div>
+      More of my D3 animations with
+      <a href="https://evoluteur.github.io/meet-the-fans">meet-the-fans</a>
+      and
+      <a href="https://evoluteur.github.io/d3-dual-range-slider/"
+        >d3-dual-range-slider</a
+      >.
+    </div>
+
+    <p>
+      Gemstones properties from the book
+      <a href="https://smile.amazon.com/dp/1844090671" target="crystals"
+        >Healing Crystals</a
+      >
+      by Michael Gienger.
+    </p>
+
+    <p>
+      &#169; 2023 <a href="https://evoluteur.github.io/">Olivier Giulieri</a>.
+    </p>
+  </body>
 </html>
