Ops, I broke it.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link href="css/d3-table-cards.css" rel="stylesheet" />
     <link href="css/demo.css" rel="stylesheet" />
     <script src="d3.v4.min.js" charset="utf-8"></script>
-    <script src="data.js" charset="utf-8"></script>
-    <script src="d3-table-cards.js" charset="utf-8"></script>
+    <script src="js/data.js" charset="utf-8"></script>
+    <script src="js/d3-table-cards.js" charset="utf-8"></script>
     <meta
       name="description"
       content="D3-Table-Cards: Table/Cards views using D3.js for animated transformations and transitions."
