--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="css/d3-table-cards.css" rel="stylesheet" />
     <link href="css/demo.css" rel="stylesheet" />
-    <script src="d3.v4.min.js" charset="utf-8"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.12.2/d3.min.js"
+      charset="utf-8"
+    ></script>
     <script src="js/data.js" charset="utf-8"></script>
     <script src="js/d3-table-cards.js" charset="utf-8"></script>
     <meta
@@ -22,8 +25,7 @@
     <div id="opts">
       <div>
         View: <a href="javascript:redraw('table')">Table</a> /
-        <a href="javascript:redraw('cards')">Cards</a> /
-        <a href="javascript:redraw('columns')">Columns</a>
+        <a href="javascript:redraw('cards')">Cards</a>
       </div>
       <div>
         Order: <a href="javascript:sort('name')">Name</a> /
