--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="js/d3-table-cards.js" charset="utf-8"></script>
     <meta
       name="description"
-      content="D3-Table-Cards: Table/Cards views using D3.js for animated transformations and transitions."
+      content="D3-Table-Cards: Example of using D3.js for transformations between table and cards views, with animated transitions while sorting elements or resizing the browser."
     />
     <meta
       name="keywords"
