--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
     <meta
       name="keywords"
-      content="d3 d3v4 js table card cards view javascript animation gemstones"
+      content="d3, d3v4, js, table, card, cards, view, javascript, animation, transition, gemstones"
     />
   </head>
   <body onresize="redraw()">
