Google analytics tracker.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-063933E3C2"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-063933E3C2");
+    </script>
     <meta charset="utf-8" />
     <title>D3-Table-Cards</title>
     <link rel="icon" type="image/png" href="favicon.png" />
