--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </script>
     <meta charset="utf-8" />
     <title>D3-Table-Cards</title>
+    <link rel="canonical" href="https://evoluteur.github.io/d3-table-cards" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="css/d3-table-cards.css" rel="stylesheet" />
     <link href="css/demo.css" rel="stylesheet" />
