--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a href="javascript:redraw('cards')">Cards</a>
       </div>
       <div>
-        Order: <a href="javascript:sort('name')">Name</a> /
+        Order by: <a href="javascript:sort('name')">Name</a> /
         <a href="javascript:sort('chakra')">Chakra</a>
       </div>
     </div>
@@ -90,7 +90,7 @@
     </p>
 
     <p>
-      &#169; 2023 <a href="https://evoluteur.github.io/">Olivier Giulieri</a>.
+      &#169; 2024 <a href="https://evoluteur.github.io/">Olivier Giulieri</a>.
     </p>
   </body>
 </html>
