--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       content="d3, d3v4, js, table, card, cards, view, javascript, animation, transition, gemstones"
     />
   </head>
-  <body onresize="redraw()">
-    <h1>Gemstones Properties</h1>
+  <body onresize="redraw()" onload="render()">
+    <h1>D3-Table-Cards</h1>
     <div id="opts">
       <div>
         View: <a href="javascript:redraw('table')">Table</a> /
@@ -45,17 +45,17 @@
         <a href="javascript:sort('chakra')">Chakra</a>
       </div>
     </div>
+    <p>
+      This demo shows animations during transition between cards and table views
+      or sorting. Click on the links in the top-right corner to see it in
+      action.
+    </p>
     <div class="holder">
       <div class="header sortable">
         <div onclick="sort('name')">Gemstone</div>
         <div onclick="sort('chakra')">Spiritual properties</div>
       </div>
     </div>
-    <script>
-      window.onload = function () {
-        render();
-      };
-    </script>
 
     <p><br /></p>
 
