--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       gtag("config", "G-063933E3C2");
     </script>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#bbdefb" />
     <title>D3-Table-Cards</title>
     <link rel="canonical" href="https://evoluteur.github.io/d3-table-cards/" />
     <link rel="icon" type="image/png" href="favicon.png" />
