Added meta image link.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       name="keywords"
       content="d3, d3v4, js, table, card, cards, view, javascript, animation, transition, gemstones"
     />
+    <meta
+      property="og:image"
+      content="https://evoluteur.github.io/d3-table-cards/screenshot.gif"
+    />
   </head>
   <body onresize="redraw()" onload="render()">
     <h1>D3-Table-Cards</h1>
