Better meta description.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="js/d3-table-cards.js" charset="utf-8"></script>
     <meta
       name="description"
-      content="D3-Table-Cards: Example of using D3.js for transformations between table and cards views, with animated transitions while sorting elements or resizing the browser."
+      content="Interactive D3.js example showing how to transform data between table and card layouts, with animated transitions for sorting, filtering, and responsive resizing."
     />
     <meta
       name="keywords"
@@ -53,9 +53,8 @@
       </div>
     </div>
     <p>
-      This demo shows animations during transition between cards and table views
-      or sorting. Click on the links in the top-right corner to see it in
-      action.
+      D3-Table-Cards demonstrates how to switch between table and card views with D3.js, featuring smooth animated transitions for sorting and responsive resizing.
+      Click on the links in the top-right corner to see it in action.
     </p>
     <div class="holder">
       <div class="header sortable">
